Creating p styling for the about blurd, fixed the issued with the columns, though the row is still overflowing. Fixed scrollTop element by adjusting -50px on animate.

--- a/index.css
+++ b/index.css
@@ -3,32 +3,55 @@ body {
   margin: 0;
 }
 
-.jumbotron {
-  height: 100vh;
-  background: #FFFF;
-  color: #6a6c77;
-  padding-top: 15%;
+.jumbotron a {
+  color:inherit;
+  text-decoration: none;
 }
 
+a:hover {
+  color:orange;
+  text-decoration: none;
+}
+
+.jumbotron {
+  height: 100vh;
+  background: #25282d;
+  color: #FFFF;
+  padding-top: 15%;
+  min-height: 350px;
+}
+
+.jumbo-btn {
+  padding-top: 10%;
+}
 
 .skill {
   height: 30vh;
-  padding-top: 1em;
+  padding-top: 1.5em;
   padding-right: 0;
+  min-height: 150px;
+  margin: 10 auto;
 }
 
 .python-box {
-  background: #853799;
+  color: #5361ad;
 }
 
 .js-box {
-  background: #338a8c;
+  color: #338a8c;
 }
 
 .html-box {
-  background: #5361ad;
+  color: #853799;
 }
 
 .css-box {
-  background: #f48f42;
+  color: #f48f42;1
+}
+
+
+.about p {
+  width: 40%;
+  margin: 0 auto;
+  text-align: justify;
 }
